--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fpm-utils"
+name = "fpm-utils-macro"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,7 +11,7 @@ proc-macro = true
 [dependencies]
 quote = "1.0.21"
 proc-macro2 = "1.0.46"
-wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
+wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev="45604f58336afaa23a79ed619ef50b69de473688" }
 
 [dependencies.syn]
 version = "1.0.102"
